# high-order-generative-music

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
configs/: generate.yaml  memorize.yaml
configs/net/: conv.yaml  tail_focus.yaml  tail_focus_small.yaml
examples/: generate.py  memorize.py
high_order_generative_music/: data.py  logger.py  networks.py  plotting.py  utils.py
tests/: test_data.py  test_utils.py
